# Bikuna

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml  test.json
.github/workflows/: kuna-ci.yml
src/: bikuna.rs  main.rs
src/lib/: http_client.rs  kuna.rs
src/lib/utils/: file_man.rs  logger.rs  mod.rs
src/lib/utils/khttp/: mod.rs
src/modules/: app.rs  clap_config.rs  client.rs  file_reader.rs  mod.rs  parse_matches.rs  types.rs
src/optionals/: logger.rs
src/utils/: mod.rs  to_log.rs
test-data/: test.json  test.txt
tests/: fs.rs  http.rs
tests/data/: test_payload.json
