[package]
name = "bikuna"
version = "0.1.1"
description = "simple TCP CLI client"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
repository = "https://github.com/whoastonic/Bikuna"
readme = "README.md"
edition = "2018"
license = "MIT"
license-file = "LICENSE"
keywords = ["tcp", "cli", "client"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
test = true
name = "bikuna"
path = "src/bikuna.rs"

[features]
default = ["logger"]
logger = ["log", "colored", "chrono"]

[dependencies]
log = { verison = "0.4.8", features = ["std"], optional = true }
colored = { verison = "1.9.3", optional = true }
chrono = { verison = "0.4.11", optional = true }

[dependencies.serde]
version = "1.0.105"
default-features = false
features = ["derive"]

[dependencies.tokio]
version = "0.2.13"
features = ["full"]

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions", "color"]