[package]
name = "kuna"
version = "0.1.0"
description = "Another HTTP client in the terminal"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
repository = "https://github.com/whoastonic/Bikuna"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = [
	"http",
	"terminal",
	"https",
	"cli",
	"client",
	"bash"
]
categories = ["command-line-utilities"]

[lib]
name = "lib_kuna"
path = "src/lib/kuna.rs"

[[test]]
name = "http"
path = "tests/http.rs"

[features]
# ENABLED BY DEFAULT
default = ["https"]

# OPTIONAL FEATURES
https = ["hyper-tls"]

[dependencies]
http = "0.2.3"
hyper-tls = { version = "0.5.0", optional = true }
tokio = { version = "1.0.2", features = ["full"] }
clap = { version = "2.33.3", features = ["yaml"] }
hyper = { version = "0.14.2", features = ["http1", "client", "tcp"] }
log = { version = "0.4.13", features = ["std"] }

[dev-dependencies]
tokio-test = "0.4.0"
serde_json = "1.0.61"
serde = { version = "1.0.120", features = ["derive"] }
